[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/NewBackgroundAssets/2.png" type="Texture" id=1]
[ext_resource path="res://Assets/NewBackgroundAssets/Background1.png" type="Texture" id=2]
[ext_resource path="res://Assets/NewBackgroundAssets/3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Misc/Title.png" type="Texture" id=4]
[ext_resource path="res://Assets/Misc/monogram_extended.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://StartPage.gd" type="Script" id=6]
[ext_resource path="res://Assets/Misc/basura.png" type="Texture" id=7]
[ext_resource path="res://Assets/Misc/radioactive.png" type="Texture" id=8]
[ext_resource path="res://Assets/Misc/coal.png" type="Texture" id=9]
[ext_resource path="res://GameMusic.tscn" type="PackedScene" id=10]
[ext_resource path="res://Button.tscn" type="PackedScene" id=11]
[ext_resource path="res://Label.tscn" type="PackedScene" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.815686, 0.815686, 0.815686, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0.682353, 0.498039, 0.498039, 1 )
shadow_size = 2
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.470588, 0.470588, 0.470588, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0.607843, 0.443137, 0.443137, 1 )
shadow_size = 2
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.717647, 0.717647, 0.717647, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0.65098, 0.466667, 0.466667, 1 )
shadow_size = 2
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.572549, 0.572549, 0.572549, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0.768627, 0.54902, 0.54902, 1 )
shadow_size = 2
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0.768627, 0.54902, 0.54902, 1 )
shadow_size = 2
shadow_offset = Vector2( 2, 2 )

[sub_resource type="DynamicFont" id=6]
outline_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
extra_spacing_top = 2
extra_spacing_bottom = 2
font_data = ExtResource( 5 )

[node name="StartPage" type="Node2D"]
script = ExtResource( 6 )

[node name="Background1" type="Sprite" parent="."]
position = Vector2( 262, 142 )
scale = Vector2( 1.00769, 1.01429 )
texture = ExtResource( 2 )

[node name="3" type="Sprite" parent="."]
position = Vector2( 260, 139 )
scale = Vector2( 0.902778, 0.87037 )
texture = ExtResource( 3 )

[node name="2" type="Sprite" parent="."]
position = Vector2( 260, 139 )
scale = Vector2( 0.902778, 0.87037 )
texture = ExtResource( 1 )

[node name="Title" type="TextureRect" parent="."]
margin_left = 50.0
margin_top = 30.0
margin_right = 470.0
margin_bottom = 150.0
texture = ExtResource( 4 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 130.0
margin_top = 120.0
margin_right = 390.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" parent="Menu" instance=ExtResource( 11 )]

[node name="Instructions" type="Button" parent="Menu"]
margin_top = 21.0
margin_right = 260.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.768627, 0.54902, 0.54902, 1 )
text = "Instructions"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="Menu"]
margin_top = 42.0
margin_right = 260.0
margin_bottom = 59.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.768627, 0.54902, 0.54902, 1 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_top = 63.0
margin_right = 260.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" parent="Menu" instance=ExtResource( 12 )]
margin_top = 68.0
margin_bottom = 80.0
text = "SCORE: 0"

[node name="radioactive" type="Sprite" parent="."]
position = Vector2( 88, 216 )
rotation = -0.258309
scale = Vector2( 1.11538, 1.16667 )
texture = ExtResource( 8 )

[node name="basura" type="Sprite" parent="."]
position = Vector2( 472, 160 )
rotation = 0.165806
scale = Vector2( 0.859876, 0.815545 )
texture = ExtResource( 7 )

[node name="coal" type="Sprite" parent="."]
position = Vector2( 48, 128 )
rotation = -0.413643
scale = Vector2( 1.64286, 1.73077 )
texture = ExtResource( 9 )

[node name="radioactive2" type="Sprite" parent="."]
position = Vector2( 397.5, 206 )
rotation = -0.329867
scale = Vector2( 0.807692, 0.833333 )
texture = ExtResource( 8 )

[node name="coal2" type="Sprite" parent="."]
position = Vector2( 192, 240 )
scale = Vector2( 1.64286, 1.73077 )
texture = ExtResource( 9 )

[node name="GameMusic" parent="." instance=ExtResource( 10 )]
position = Vector2( 232, 96 )
[connection signal="pressed" from="Menu/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Menu/Instructions" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Menu/Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="pressed" from="Menu/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Menu/Credits" to="." method="_on_Button_pressed"]
